@@ -465,6 +465,7 @@ All (GUI):
 - Allow using wxEVT_UPDATE_UI with wxRibbonButtonBar (Emilien Kia).
 - Add wxRibbonButtonBar::InsertXXXButton() methods (Emilien Kia).
 - Fix multiple item selection in generic wxTreeCtrl (Igor Korot).
+- Implement best size calculation for report mode wxListCtrl.
 
 GTK:
 
